--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
   <title>F1 Start Timer</title>
 </head>
 <body>
-  <div id="container">
+  <div id="f1-timer-container">
     <h1>F1 start reaction time</h1>
     <h4>Click anywhere to start, click on the green box when the lights go out!</h4>
 
-    <div class="light off" id="1"></div>
-    <div class="light off" id="2"></div>
-    <div class="light off" id="3"></div>
-    <div class="light off" id="4"></div>
-    <div class="light off" id="5"></div>
+    <div class="f1-timer-light f1-timer-off" id="f1-timer-1"></div>
+    <div class="f1-timer-light f1-timer-off" id="f1-timer-2"></div>
+    <div class="f1-timer-light f1-timer-off" id="f1-timer-3"></div>
+    <div class="f1-timer-light f1-timer-off" id="f1-timer-4"></div>
+    <div class="f1-timer-light f1-timer-off" id="f1-timer-5"></div>
 
-    <div id="start">
-      <p id="display-time"></p>
+    <div id="f1-timer-start">
+      <p id="f1-timer-display-time"></p>
     </div>
 
-    <div id="reload" class="invisible">
+    <div id="f1-timer-reload" class="f1-timer-invisible">
       <p>Click here to reload</p>
     </div>
   </div>
